--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
-Author: W3layouts
-Author URL: http:Aswin baburaj
+Author:ASWIN BABURAJ
+Author URL:https://aswin-baburaj.github.io/aswinbaburaj/
 License URL: http://aswinbaburaj.org/licenses/by/3.0/
 -->
 <!DOCTYPE HTML>
